--- a/index.html
+++ b/index.html
@@ -23,28 +23,36 @@
 
     <div class="page" id="page3">
       <h1>The Ceramic Store</h1>
-      <p>One day while in town, the monk stopped a store a saw the perfect chagama</p>
+      <p>One day while in town, the monk stopped a store and saw the perfect chagama</p>
       <button class="next-btn" onclick="goToPage(4)">Next</button>
     </div>
     <div class="page" id="page4">
-        <h1>After purchase</h1>
-        <p>THe monk noticed that the chagama was heavier than expected; but without thinking much of it he brought it back home</p>
+        <h1>After the purchase,</h1>
+        <p>The monk noticed that the chagama was heavier than expected; but without thinking much of it he brought it back home</p>
         <button class="next-btn" onclick="goToPage(5)">Next</button>
       </div>
     <div class="page" id="page5">
           <h1>Once home</h1>
-          <p>The monk wanted a cup of tea so he decided to put his new chagama to the test.</p>
+          <p>The monk wanted a cup of tea so he decided to put it test.</p>
           <button class="next-btn" onclick="goToPage(6)">Next</button>
     </div>
      <div class="page" id="page6">
           <h1>As he the Chagama on the stove</h1>
-          <p>There was an odd rattling that can be hearrd throughout the small house</p>
+          <p>There was an odd rattling that can be heard throughout the small house</p>
           <button class="next-btn" onclick="goToPage(7)">Next</button>
     </div>
     <div class="page" id="page7">
-      <h1></h1>
-      <p>After getting home, the monk wanted a cup of tea so he decided to put his new chagama to the test.</p>
+      <h1>As the rattling continued,</h1>
+      <p>There was a large puff of smoke</p>
       <button class="next-btn" onclick="goToPage(8)">Next</button>
+    </div>
+    <div class="page" id="page8">
+      <h1>As the smoke cleared, </h1>
+      <p>The monk realized that the chagama has morphed into part tanuki</p>
+      <button class="next-btn" onclick="goToPage(8)">Next</button>
+    </div>
+    
+  
     </div>
   </div>
 
