--- a/index.html
+++ b/index.html
@@ -10,46 +10,52 @@
 
   <div class="storybook">
     <div class="page" id="page1">
-      <h1>Once Upon a Time</h1>
-      <p>There was a monk who lived in the mountains. </p>
+      <h1>BunBukuChagama</h1>
       <button class="next-btn" onclick="goToPage(2)">Next</button>
     </div>
-
     <div class="page" id="page2">
-      <h1>The Monk</h1>
-      <p>This monk had quite the hobby of collecting ceramic goods</p>
+      <h1>Once Upon a Time</h1>
+      <p>There was a monk who lived in the mountains. </p>
       <button class="next-btn" onclick="goToPage(3)">Next</button>
+      <button class="back-btn" onclick="goToPage(1)">Back</button>
     </div>
 
     <div class="page" id="page3">
+      <h1>The Monk</h1>
+      <p>This monk had quite the hobby of collecting ceramic goods</p>
+      <button class="next-btn" onclick="goToPage(4)">Next</button>
+      <button class="back-btn" onclick="goToPage(2)">Back</button>
+    </div>
+
+    <div class="page" id="page4">
       <h1>The Ceramic Store</h1>
       <p>One day while in town, the monk stopped a store and saw the perfect chagama</p>
-      <button class="next-btn" onclick="goToPage(4)">Next</button>
+      <button class="next-btn" onclick="goToPage(5)">Next</button>
     </div>
-    <div class="page" id="page4">
+    <div class="page" id="page5">
         <h1>After the purchase,</h1>
         <p>The monk noticed that the chagama was heavier than expected; but without thinking much of it he brought it back home</p>
-        <button class="next-btn" onclick="goToPage(5)">Next</button>
+        <button class="next-btn" onclick="goToPage(6)">Next</button>
       </div>
-    <div class="page" id="page5">
+    <div class="page" id="page6">
           <h1>Once home</h1>
           <p>The monk wanted a cup of tea so he decided to put it test.</p>
-          <button class="next-btn" onclick="goToPage(6)">Next</button>
-    </div>
-     <div class="page" id="page6">
-          <h1>As he the Chagama on the stove</h1>
-          <p>There was an odd rattling that can be heard throughout the small house</p>
           <button class="next-btn" onclick="goToPage(7)">Next</button>
     </div>
-    <div class="page" id="page7">
-      <h1>As the rattling continued,</h1>
-      <p>There was a large puff of smoke</p>
-      <button class="next-btn" onclick="goToPage(8)">Next</button>
+     <div class="page" id="page7">
+          <h1>As he the Chagama on the stove</h1>
+          <p>There was an odd rattling that can be heard throughout the small house</p>
+          <button class="next-btn" onclick="goToPage(8)">Next</button>
     </div>
     <div class="page" id="page8">
+      <h1>As the rattling continued,</h1>
+      <p>There was a large puff of smoke</p>
+      <button class="next-btn" onclick="goToPage(9)">Next</button>
+    </div>
+    <div class="page" id="page9">
       <h1>As the smoke cleared, </h1>
       <p>The monk realized that the chagama has morphed into part tanuki</p>
-      <button class="next-btn" onclick="goToPage(8)">Next</button>
+      <button class="next-btn" onclick="goToPage(10)">Next</button>
     </div>
     
   
