--- a/index.html
+++ b/index.html
@@ -31,32 +31,50 @@
       <h1>The Ceramic Store</h1>
       <p>One day while in town, the monk stopped a store and saw the perfect chagama</p>
       <button class="next-btn" onclick="goToPage(5)">Next</button>
+      <button class="back-btn" onclick="goToPage(3)">Back</button>
     </div>
     <div class="page" id="page5">
         <h1>After the purchase,</h1>
         <p>The monk noticed that the chagama was heavier than expected; but without thinking much of it he brought it back home</p>
         <button class="next-btn" onclick="goToPage(6)">Next</button>
+        <button class="back-btn" onclick="goToPage(4)">Back</button>
       </div>
     <div class="page" id="page6">
           <h1>Once home</h1>
           <p>The monk wanted a cup of tea so he decided to put it test.</p>
           <button class="next-btn" onclick="goToPage(7)">Next</button>
+          <button class="back-btn" onclick="goToPage(5)">Back</button>
     </div>
      <div class="page" id="page7">
-          <h1>As he the Chagama on the stove</h1>
+          <h1>When he put the Chagama on the stove</h1>
           <p>There was an odd rattling that can be heard throughout the small house</p>
           <button class="next-btn" onclick="goToPage(8)">Next</button>
+          <button class="back-btn" onclick="goToPage(6)">Back</button>
     </div>
     <div class="page" id="page8">
       <h1>As the rattling continued,</h1>
       <p>There was a large puff of smoke</p>
       <button class="next-btn" onclick="goToPage(9)">Next</button>
+      <button class="back-btn" onclick="goToPage(7)">Back</button>
     </div>
     <div class="page" id="page9">
       <h1>As the smoke cleared, </h1>
       <p>The monk realized that the chagama has morphed into part tanuki</p>
       <button class="next-btn" onclick="goToPage(10)">Next</button>
+      <button class="back-btn" onclick="goToPage(8)">Back</button>
+    <div class="page" id="page10">
+        <h1>There was a loud shriek</h1>
+        <p>Both the monk and Tanuki were startled </p>
+        <button class="next-btn" onclick="goToPage(11)">Next</button>
+        <button class="back-btn" onclick="goToPage(9)">Back</button>
     </div>
+    <div class="page" id="page11">
+      <h1>As the smoke cleared, </h1>
+      <p>The monk realized that the chagama has morphed into part tanuki</p>
+      <button class="next-btn" onclick="goToPage(12)">Next</button>
+      <button class="back-btn" onclick="goToPage(10)">Back</button>
+        
+  </div>
     
   
     </div>
