--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="storybook">
     <div class="page" id="page1">
       <h1>BunBukuChagama</h1>
-      <button class="next-btn" onclick="goToPage(2)">Next</button>
+      <button class="next-btn" onclick="goToPage(2)">Start</button>
     </div>
     <div class="page" id="page2">
       <h1>Once Upon a Time</h1>
